--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>github page for jalal</title>
+</head>
+<body>
+    <h1>Yup, this works!</h1>
+</body>
+</html>
