--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("92476");
+              var pageTracker = _gat._getTracker("UA-92476-10");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
